Fix contrast on immersive book feature card link color

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -563,7 +563,7 @@ nav ul li a:hover,  nav ul li a:active {
 }
 
 .card--dark-magenta .card__feature__content a {
-  color: rgb(221,88,123);
+  color: rgb(221,170,182);
 }
 
 .card--dark-sienna {
